# lct-back-2024

./: .env  Dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 1d8111f8183e_initial_migration.py  3a7e64ca308a_initial_migration.py  4474b793d360_initial_migration.py  4b620d244bc3_initial_migration.py  4e8a185c6c2f_initial_migration.py  b78fbc329581_initial_migration.py  b8941624b4f7_initial_migration.py  dd72f2712ee6_initial_migration.py  e00ab2697f7a_initial_migration.py
app/: main.py
app/config/: config.py
app/database/: __init__.py  connection.py
app/database/tables/: __init__.py  cadastral_manual.py  chat.py  data_source.py  data_source_meta.py  schedule.py  shape.py  shape_proccess.py  vri.py
app/models/: __init__.py  cadastral_manual.py  data_source_metas.py  data_sources.py  exceptions.py  filter_params.py  geocode.py  schedule.py  search.py  shape.py  users.py  utils.py  vri.py
app/repositories/: __init__.py  cadastral_manual.py  data_source_metas.py  data_sources.py  schedules.py
app/routers/: ai.py  auth.py  calc.py  data_source_metas.py  data_sources.py  geocode.py  main_func.py  manuals.py  reports.py  result.py  schedule.py  shape_func.py  solution.py  source_layers.py  users.py  utils.py
app/services/: __init__.py  cadastral_manual.py  data_source_metas.py  data_sources.py  schedules.py  users.py
app/shapefiles/: район.shp
app/shapefiles/_10_Округ, район/: округ.dbf  округ.sbn  округ.sbx  округ.shp  округ.shx  округ.xml  район.dbf  район.prj  район.sbn  район.sbx  район.shx  район.xml
app/shapefiles/_12_ООЗТ/: ООЗТ.dbf  (+4 more)
(+102 files in other folders)
