[tool.poetry]
name = "lct-backend"
version = "0.1.0"
description = "Backend for lct-2024 (task 4)"
authors = ["exilon <contact@undfnd.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.13.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
pydantic = "^2.7.3"
requests = "^2.32.3"
geopandas = "^0.14.4"
shapely = "^2.0.4"
pyproj = "^3.6.1"
fiona = "^1.9.6"
matplotlib = "^3.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
fastapi-utils = "^0.6.0"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.3.1"
typing-inspect = "^0.9.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
